services/hello/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      deployment: hello
  template:
    metadata:
      labels:
        deployment: hello
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: hello
        matchLabelKeys:
          - pod-template-hash
      containers:
      - name: the-container
        image: nginx
        resources:
          limits:
            cpu: "0.1"
            memory: "512Mi"
          requests:
            memory: "512Mi"
        ports:
        - containerPort: 80
