services/hello/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: the-service
spec:
  selector:
    deployment: hello
  # type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
