services/hello/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: the-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - hello.k8s.kuhn.cloud
      secretName: k8s-kuhn-cloud-tls
  rules:
    - host: hello.k8s.kuhn.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: the-service
                port:
                  number: 80
